Use Option pattern

--- a/WalletsWebApi/appsettings.json
+++ b/WalletsWebApi/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Web3Endpoint": "https://sepolia.infura.io/v3/2ce34d1af6ad45b88d234ad25196d941",
-  "BackgroundWorkerServiceTaskDelay": "3"
+  "AppSettings": {
+    "Web3Endpoint": "https://sepolia.infura.io/v3/2ce34d1af6ad45b88d234ad25196d941",
+    "BackgroundWorkerServiceTaskDelay": "3"
+  }
 }
